--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/layouts/sidebar/SidebarLayout.mocks.ts"
+  ],
   "exclude": ["node_modules"]
 }
