--- a/package.json
+++ b/package.json
@@ -38,15 +38,21 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "cross-env": "^7.0.3",
     "eslint-plugin-storybook": "^0.6.10",
     "husky": "^8.0.3",
-    "prettier": "^2.8.4"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "storybook-css-modules-preset": "^1.1.1",
+    "tailwindcss": "^3.2.6",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
   },
   "resolutions": {
     "webpack": "^5"
