--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
+    "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "cross-env": "^7.0.3",
