refactor: add index files to all the components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,6 @@
       "@mock/*": ["./mock/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/components/templates/layouts/sidebar/SidebarLayout.mocks.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
